--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,12 @@
             android:name=".SignupActivity"
             android:exported="true" />
         <activity
+            android:name=".CommunityActivity"
+            android:exported="true" />
+        <activity
+            android:name=".AskCommunityActivity"
+            android:exported="true" />
+        <activity
             android:name=".WelcomeActivity"
             android:exported="true">
             <intent-filter>
